<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/comitBtn"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/roomNum" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/userName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/antecedent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/phoneNum" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/rentNum" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/netMoney" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/property" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/enterTime" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/water" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/power" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/roomNum"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:layout_weight="1"
                android:text="@string/roomNum" />

            <EditText
                android:id="@+id/useName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="text"
                android:text="@string/userName" />

            <EditText
                android:id="@+id/antecedent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:layout_weight="1"
                android:text="@string/antecedent" />

            <EditText
                android:id="@+id/phoneNum"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="phone"
                android:layout_weight="1"
                android:text="@string/phoneNum" />

            <EditText
                android:id="@+id/rentNum"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:layout_weight="1"
                android:text="@string/rentNum" />

            <EditText
                android:id="@+id/netMoney"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:layout_weight="1"
                android:text="@string/netMoney" />

            <EditText
                android:id="@+id/property"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:layout_weight="1"
                android:text="@string/property" />

            <EditText
                android:id="@+id/enterTime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/enterTime" />

            <EditText
                android:id="@+id/waterNum"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:layout_weight="1"
                android:text="@string/water" />

            <EditText
                android:id="@+id/powerNum"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/power" />
        </LinearLayout>
    </LinearLayout>
    
    <Button 
        android:id="@+id/comitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comitBtnName"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        />

    <Button 
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backBtnName"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>