<?xml version="1.0" encoding="utf-8"?>
<!-- 添加水电 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/antiquewhite"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textColor="@color/deeppink"
            android:text="@string/addWaterPowerTitle"
            android:layout_marginBottom="15dp"
            android:textSize="30sp" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/water_power_title" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/water_power_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/comitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/comitBtnName" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/backBtnName" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>